--- a/public/success_style.css
+++ b/public/success_style.css
@@ -18,6 +18,10 @@ text-align: center;
   text-align: center;
 }
 
+.success-btn {
+  margin-bottom: 2rem;
+}
+
 /* .failure-top {
   background-color: #dbe2ef;
   text-align: center;
